--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div> 
                 <div class="portfolio-item-wrapper">
         
-                    <div class="portfolio-img-background" style="background-image:url(images/backup/coding.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(images/backup/Coding.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/logos/Coding.png" alt=""> -->
@@ -97,7 +97,7 @@
                 </div> 
                 <div class="portfolio-item-wrapper">
         
-                    <div class="portfolio-img-background" style="background-image:url(images/backup/coding2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(images/backup/Coding2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/logos/Coding.png" alt=""> -->
